parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY_ASOCIATIVO
    CLASS
    DOBLE_DOS_PUNTOS
    ELSE
    ELSEIF
    FLECHA
    FOR
    FUNCION
    NEW
    PRINT
    PRIVATE
    PROTECTED
    PUBLIC
    READLINE
    WHILE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> TAG_INICIO sentencias TAG_FIN
Rule 2     programa -> TAG_INICIO sentencias
Rule 3     sentencias -> sentencia
Rule 4     sentencias -> sentencias sentencia
Rule 5     sentencia -> asignacion
Rule 6     sentencia -> declaracion_define
Rule 7     sentencia -> sentencia_echo
Rule 8     sentencia -> asignacion_array
Rule 9     sentencia -> sentencia_if
Rule 10    sentencia -> sentencia_foreach
Rule 11    sentencia -> sentencia_funcion
Rule 12    sentencia -> sentencia_return
Rule 13    sentencia -> sentencia_llamada_funcion
Rule 14    sentencia -> sentencia_incremento
Rule 15    sentencia -> sentencia_comentario
Rule 16    sentencia_foreach -> FOREACH PAREN_IZQ VARIABLE AS ASIGNAR VARIABLE PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
Rule 17    sentencia_foreach -> FOREACH PAREN_IZQ VARIABLE AS VARIABLE PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
Rule 18    sentencia_funcion -> FUNCTION IDENTIFICADOR PAREN_IZQ parametros_funcion PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
Rule 19    parametros_funcion -> VARIABLE
Rule 20    parametros_funcion -> parametros_funcion COMA VARIABLE
Rule 21    parametros_funcion -> <empty>
Rule 22    sentencia_return -> RETURN expresion PUNTO_COMA
Rule 23    sentencia_llamada_funcion -> IDENTIFICADOR PAREN_IZQ lista_argumentos PAREN_DER PUNTO_COMA
Rule 24    lista_argumentos -> expresion
Rule 25    lista_argumentos -> lista_argumentos COMA expresion
Rule 26    lista_argumentos -> <empty>
Rule 27    expresion -> VARIABLE CORCHETE_IZQ CADENA CORCHETE_DER
Rule 28    sentencia_incremento -> VARIABLE MAS MAS PUNTO_COMA
Rule 29    expresion -> expresion PUNTO expresion
Rule 30    sentencia_comentario -> <empty>
Rule 31    asignacion -> VARIABLE ASIGNAR expresion PUNTO_COMA
Rule 32    asignacion_array -> VARIABLE CORCHETE_IZQ CORCHETE_DER ASIGNAR expresion PUNTO_COMA
Rule 33    declaracion_define -> DEFINE PAREN_IZQ CADENA COMA expresion PAREN_DER PUNTO_COMA
Rule 34    sentencia_echo -> ECHO expresion PUNTO_COMA
Rule 35    sentencia_if -> IF PAREN_IZQ condicion PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
Rule 36    condicion -> expresion IGUAL expresion
Rule 37    condicion -> expresion NO_IGUAL expresion
Rule 38    condicion -> expresion MAYOR expresion
Rule 39    condicion -> expresion MENOR expresion
Rule 40    condicion -> expresion MAYOR_IGUAL expresion
Rule 41    condicion -> expresion MENOR_IGUAL expresion
Rule 42    expresion -> expresion MAS expresion
Rule 43    expresion -> expresion MENOS expresion
Rule 44    expresion -> expresion MULTIPLICAR expresion
Rule 45    expresion -> expresion DIVIDIR expresion
Rule 46    expresion -> PAREN_IZQ expresion PAREN_DER
Rule 47    expresion -> NUMERO
Rule 48    expresion -> CADENA
Rule 49    expresion -> VARIABLE
Rule 50    expresion -> IDENTIFICADOR
Rule 51    expresion -> CORCHETE_IZQ CORCHETE_DER
Rule 52    expresion -> CORCHETE_IZQ lista_elementos CORCHETE_DER
Rule 53    lista_elementos -> expresion
Rule 54    lista_elementos -> lista_elementos COMA expresion
Rule 55    expresion -> VARIABLE CORCHETE_IZQ expresion CORCHETE_DER

Terminals, with rules where they appear

ARRAY_ASOCIATIVO     : 
AS                   : 16 17
ASIGNAR              : 16 31 32
CADENA               : 27 33 48
CLASS                : 
COMA                 : 20 25 33 54
CORCHETE_DER         : 27 32 51 52 55
CORCHETE_IZQ         : 27 32 51 52 55
DEFINE               : 33
DIVIDIR              : 45
DOBLE_DOS_PUNTOS     : 
ECHO                 : 34
ELSE                 : 
ELSEIF               : 
FLECHA               : 
FOR                  : 
FOREACH              : 16 17
FUNCION              : 
FUNCTION             : 18
IDENTIFICADOR        : 18 23 50
IF                   : 35
IGUAL                : 36
LLAVE_DER            : 16 17 18 35
LLAVE_IZQ            : 16 17 18 35
MAS                  : 28 28 42
MAYOR                : 38
MAYOR_IGUAL          : 40
MENOR                : 39
MENOR_IGUAL          : 41
MENOS                : 43
MULTIPLICAR          : 44
NEW                  : 
NO_IGUAL             : 37
NUMERO               : 47
PAREN_DER            : 16 17 18 23 33 35 46
PAREN_IZQ            : 16 17 18 23 33 35 46
PRINT                : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
PUNTO                : 29
PUNTO_COMA           : 22 23 28 31 32 33 34
READLINE             : 
RETURN               : 22
TAG_FIN              : 1
TAG_INICIO           : 1 2
VARIABLE             : 16 16 17 17 19 20 27 28 31 32 49 55
WHILE                : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 5
asignacion_array     : 8
condicion            : 35
declaracion_define   : 6
expresion            : 22 24 25 29 29 31 32 33 34 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 53 54 55
lista_argumentos     : 23 25
lista_elementos      : 52 54
parametros_funcion   : 18 20
programa             : 0
sentencia            : 3 4
sentencia_comentario : 15
sentencia_echo       : 7
sentencia_foreach    : 10
sentencia_funcion    : 11
sentencia_if         : 9
sentencia_incremento : 14
sentencia_llamada_funcion : 13
sentencia_return     : 12
sentencias           : 1 2 4 16 17 18 35

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . TAG_INICIO sentencias TAG_FIN
    (2) programa -> . TAG_INICIO sentencias

    TAG_INICIO      shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> TAG_INICIO . sentencias TAG_FIN
    (2) programa -> TAG_INICIO . sentencias
    (3) sentencias -> . sentencia
    (4) sentencias -> . sentencias sentencia
    (5) sentencia -> . asignacion
    (6) sentencia -> . declaracion_define
    (7) sentencia -> . sentencia_echo
    (8) sentencia -> . asignacion_array
    (9) sentencia -> . sentencia_if
    (10) sentencia -> . sentencia_foreach
    (11) sentencia -> . sentencia_funcion
    (12) sentencia -> . sentencia_return
    (13) sentencia -> . sentencia_llamada_funcion
    (14) sentencia -> . sentencia_incremento
    (15) sentencia -> . sentencia_comentario
    (31) asignacion -> . VARIABLE ASIGNAR expresion PUNTO_COMA
    (33) declaracion_define -> . DEFINE PAREN_IZQ CADENA COMA expresion PAREN_DER PUNTO_COMA
    (34) sentencia_echo -> . ECHO expresion PUNTO_COMA
    (32) asignacion_array -> . VARIABLE CORCHETE_IZQ CORCHETE_DER ASIGNAR expresion PUNTO_COMA
    (35) sentencia_if -> . IF PAREN_IZQ condicion PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
    (16) sentencia_foreach -> . FOREACH PAREN_IZQ VARIABLE AS ASIGNAR VARIABLE PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
    (17) sentencia_foreach -> . FOREACH PAREN_IZQ VARIABLE AS VARIABLE PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
    (18) sentencia_funcion -> . FUNCTION IDENTIFICADOR PAREN_IZQ parametros_funcion PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
    (22) sentencia_return -> . RETURN expresion PUNTO_COMA
    (23) sentencia_llamada_funcion -> . IDENTIFICADOR PAREN_IZQ lista_argumentos PAREN_DER PUNTO_COMA
    (28) sentencia_incremento -> . VARIABLE MAS MAS PUNTO_COMA
    (30) sentencia_comentario -> .

  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for DEFINE resolved as shift
  ! shift/reduce conflict for ECHO resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOREACH resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
    VARIABLE        shift and go to state 16
    DEFINE          shift and go to state 17
    ECHO            shift and go to state 18
    IF              shift and go to state 19
    FOREACH         shift and go to state 20
    FUNCTION        shift and go to state 21
    RETURN          shift and go to state 23
    IDENTIFICADOR   shift and go to state 22
    TAG_FIN         reduce using rule 30 (sentencia_comentario -> .)
    $end            reduce using rule 30 (sentencia_comentario -> .)

  ! VARIABLE        [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! DEFINE          [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! ECHO            [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! IF              [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! FOREACH         [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! FUNCTION        [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! RETURN          [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 30 (sentencia_comentario -> .) ]

    sentencias                     shift and go to state 3
    sentencia                      shift and go to state 4
    asignacion                     shift and go to state 5
    declaracion_define             shift and go to state 6
    sentencia_echo                 shift and go to state 7
    asignacion_array               shift and go to state 8
    sentencia_if                   shift and go to state 9
    sentencia_foreach              shift and go to state 10
    sentencia_funcion              shift and go to state 11
    sentencia_return               shift and go to state 12
    sentencia_llamada_funcion      shift and go to state 13
    sentencia_incremento           shift and go to state 14
    sentencia_comentario           shift and go to state 15

state 3

    (1) programa -> TAG_INICIO sentencias . TAG_FIN
    (2) programa -> TAG_INICIO sentencias .
    (4) sentencias -> sentencias . sentencia
    (5) sentencia -> . asignacion
    (6) sentencia -> . declaracion_define
    (7) sentencia -> . sentencia_echo
    (8) sentencia -> . asignacion_array
    (9) sentencia -> . sentencia_if
    (10) sentencia -> . sentencia_foreach
    (11) sentencia -> . sentencia_funcion
    (12) sentencia -> . sentencia_return
    (13) sentencia -> . sentencia_llamada_funcion
    (14) sentencia -> . sentencia_incremento
    (15) sentencia -> . sentencia_comentario
    (31) asignacion -> . VARIABLE ASIGNAR expresion PUNTO_COMA
    (33) declaracion_define -> . DEFINE PAREN_IZQ CADENA COMA expresion PAREN_DER PUNTO_COMA
    (34) sentencia_echo -> . ECHO expresion PUNTO_COMA
    (32) asignacion_array -> . VARIABLE CORCHETE_IZQ CORCHETE_DER ASIGNAR expresion PUNTO_COMA
    (35) sentencia_if -> . IF PAREN_IZQ condicion PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
    (16) sentencia_foreach -> . FOREACH PAREN_IZQ VARIABLE AS ASIGNAR VARIABLE PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
    (17) sentencia_foreach -> . FOREACH PAREN_IZQ VARIABLE AS VARIABLE PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
    (18) sentencia_funcion -> . FUNCTION IDENTIFICADOR PAREN_IZQ parametros_funcion PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
    (22) sentencia_return -> . RETURN expresion PUNTO_COMA
    (23) sentencia_llamada_funcion -> . IDENTIFICADOR PAREN_IZQ lista_argumentos PAREN_DER PUNTO_COMA
    (28) sentencia_incremento -> . VARIABLE MAS MAS PUNTO_COMA
    (30) sentencia_comentario -> .

  ! shift/reduce conflict for TAG_FIN resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for DEFINE resolved as shift
  ! shift/reduce conflict for ECHO resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOREACH resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 2 (programa -> TAG_INICIO sentencias .)
    TAG_FIN         shift and go to state 24
    $end            reduce using rule 2 (programa -> TAG_INICIO sentencias .)
    VARIABLE        shift and go to state 16
    DEFINE          shift and go to state 17
    ECHO            shift and go to state 18
    IF              shift and go to state 19
    FOREACH         shift and go to state 20
    FUNCTION        shift and go to state 21
    RETURN          shift and go to state 23
    IDENTIFICADOR   shift and go to state 22

  ! TAG_FIN         [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! VARIABLE        [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! DEFINE          [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! ECHO            [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! IF              [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! FOREACH         [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! FUNCTION        [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! RETURN          [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 30 (sentencia_comentario -> .) ]
  ! $end            [ reduce using rule 30 (sentencia_comentario -> .) ]

    sentencia                      shift and go to state 25
    asignacion                     shift and go to state 5
    declaracion_define             shift and go to state 6
    sentencia_echo                 shift and go to state 7
    asignacion_array               shift and go to state 8
    sentencia_if                   shift and go to state 9
    sentencia_foreach              shift and go to state 10
    sentencia_funcion              shift and go to state 11
    sentencia_return               shift and go to state 12
    sentencia_llamada_funcion      shift and go to state 13
    sentencia_incremento           shift and go to state 14
    sentencia_comentario           shift and go to state 15

state 4

    (3) sentencias -> sentencia .

    TAG_FIN         reduce using rule 3 (sentencias -> sentencia .)
    VARIABLE        reduce using rule 3 (sentencias -> sentencia .)
    DEFINE          reduce using rule 3 (sentencias -> sentencia .)
    ECHO            reduce using rule 3 (sentencias -> sentencia .)
    IF              reduce using rule 3 (sentencias -> sentencia .)
    FOREACH         reduce using rule 3 (sentencias -> sentencia .)
    FUNCTION        reduce using rule 3 (sentencias -> sentencia .)
    RETURN          reduce using rule 3 (sentencias -> sentencia .)
    IDENTIFICADOR   reduce using rule 3 (sentencias -> sentencia .)
    $end            reduce using rule 3 (sentencias -> sentencia .)
    LLAVE_DER       reduce using rule 3 (sentencias -> sentencia .)


state 5

    (5) sentencia -> asignacion .

    TAG_FIN         reduce using rule 5 (sentencia -> asignacion .)
    VARIABLE        reduce using rule 5 (sentencia -> asignacion .)
    DEFINE          reduce using rule 5 (sentencia -> asignacion .)
    ECHO            reduce using rule 5 (sentencia -> asignacion .)
    IF              reduce using rule 5 (sentencia -> asignacion .)
    FOREACH         reduce using rule 5 (sentencia -> asignacion .)
    FUNCTION        reduce using rule 5 (sentencia -> asignacion .)
    RETURN          reduce using rule 5 (sentencia -> asignacion .)
    IDENTIFICADOR   reduce using rule 5 (sentencia -> asignacion .)
    $end            reduce using rule 5 (sentencia -> asignacion .)
    LLAVE_DER       reduce using rule 5 (sentencia -> asignacion .)


state 6

    (6) sentencia -> declaracion_define .

    TAG_FIN         reduce using rule 6 (sentencia -> declaracion_define .)
    VARIABLE        reduce using rule 6 (sentencia -> declaracion_define .)
    DEFINE          reduce using rule 6 (sentencia -> declaracion_define .)
    ECHO            reduce using rule 6 (sentencia -> declaracion_define .)
    IF              reduce using rule 6 (sentencia -> declaracion_define .)
    FOREACH         reduce using rule 6 (sentencia -> declaracion_define .)
    FUNCTION        reduce using rule 6 (sentencia -> declaracion_define .)
    RETURN          reduce using rule 6 (sentencia -> declaracion_define .)
    IDENTIFICADOR   reduce using rule 6 (sentencia -> declaracion_define .)
    $end            reduce using rule 6 (sentencia -> declaracion_define .)
    LLAVE_DER       reduce using rule 6 (sentencia -> declaracion_define .)


state 7

    (7) sentencia -> sentencia_echo .

    TAG_FIN         reduce using rule 7 (sentencia -> sentencia_echo .)
    VARIABLE        reduce using rule 7 (sentencia -> sentencia_echo .)
    DEFINE          reduce using rule 7 (sentencia -> sentencia_echo .)
    ECHO            reduce using rule 7 (sentencia -> sentencia_echo .)
    IF              reduce using rule 7 (sentencia -> sentencia_echo .)
    FOREACH         reduce using rule 7 (sentencia -> sentencia_echo .)
    FUNCTION        reduce using rule 7 (sentencia -> sentencia_echo .)
    RETURN          reduce using rule 7 (sentencia -> sentencia_echo .)
    IDENTIFICADOR   reduce using rule 7 (sentencia -> sentencia_echo .)
    $end            reduce using rule 7 (sentencia -> sentencia_echo .)
    LLAVE_DER       reduce using rule 7 (sentencia -> sentencia_echo .)


state 8

    (8) sentencia -> asignacion_array .

    TAG_FIN         reduce using rule 8 (sentencia -> asignacion_array .)
    VARIABLE        reduce using rule 8 (sentencia -> asignacion_array .)
    DEFINE          reduce using rule 8 (sentencia -> asignacion_array .)
    ECHO            reduce using rule 8 (sentencia -> asignacion_array .)
    IF              reduce using rule 8 (sentencia -> asignacion_array .)
    FOREACH         reduce using rule 8 (sentencia -> asignacion_array .)
    FUNCTION        reduce using rule 8 (sentencia -> asignacion_array .)
    RETURN          reduce using rule 8 (sentencia -> asignacion_array .)
    IDENTIFICADOR   reduce using rule 8 (sentencia -> asignacion_array .)
    $end            reduce using rule 8 (sentencia -> asignacion_array .)
    LLAVE_DER       reduce using rule 8 (sentencia -> asignacion_array .)


state 9

    (9) sentencia -> sentencia_if .

    TAG_FIN         reduce using rule 9 (sentencia -> sentencia_if .)
    VARIABLE        reduce using rule 9 (sentencia -> sentencia_if .)
    DEFINE          reduce using rule 9 (sentencia -> sentencia_if .)
    ECHO            reduce using rule 9 (sentencia -> sentencia_if .)
    IF              reduce using rule 9 (sentencia -> sentencia_if .)
    FOREACH         reduce using rule 9 (sentencia -> sentencia_if .)
    FUNCTION        reduce using rule 9 (sentencia -> sentencia_if .)
    RETURN          reduce using rule 9 (sentencia -> sentencia_if .)
    IDENTIFICADOR   reduce using rule 9 (sentencia -> sentencia_if .)
    $end            reduce using rule 9 (sentencia -> sentencia_if .)
    LLAVE_DER       reduce using rule 9 (sentencia -> sentencia_if .)


state 10

    (10) sentencia -> sentencia_foreach .

    TAG_FIN         reduce using rule 10 (sentencia -> sentencia_foreach .)
    VARIABLE        reduce using rule 10 (sentencia -> sentencia_foreach .)
    DEFINE          reduce using rule 10 (sentencia -> sentencia_foreach .)
    ECHO            reduce using rule 10 (sentencia -> sentencia_foreach .)
    IF              reduce using rule 10 (sentencia -> sentencia_foreach .)
    FOREACH         reduce using rule 10 (sentencia -> sentencia_foreach .)
    FUNCTION        reduce using rule 10 (sentencia -> sentencia_foreach .)
    RETURN          reduce using rule 10 (sentencia -> sentencia_foreach .)
    IDENTIFICADOR   reduce using rule 10 (sentencia -> sentencia_foreach .)
    $end            reduce using rule 10 (sentencia -> sentencia_foreach .)
    LLAVE_DER       reduce using rule 10 (sentencia -> sentencia_foreach .)


state 11

    (11) sentencia -> sentencia_funcion .

    TAG_FIN         reduce using rule 11 (sentencia -> sentencia_funcion .)
    VARIABLE        reduce using rule 11 (sentencia -> sentencia_funcion .)
    DEFINE          reduce using rule 11 (sentencia -> sentencia_funcion .)
    ECHO            reduce using rule 11 (sentencia -> sentencia_funcion .)
    IF              reduce using rule 11 (sentencia -> sentencia_funcion .)
    FOREACH         reduce using rule 11 (sentencia -> sentencia_funcion .)
    FUNCTION        reduce using rule 11 (sentencia -> sentencia_funcion .)
    RETURN          reduce using rule 11 (sentencia -> sentencia_funcion .)
    IDENTIFICADOR   reduce using rule 11 (sentencia -> sentencia_funcion .)
    $end            reduce using rule 11 (sentencia -> sentencia_funcion .)
    LLAVE_DER       reduce using rule 11 (sentencia -> sentencia_funcion .)


state 12

    (12) sentencia -> sentencia_return .

    TAG_FIN         reduce using rule 12 (sentencia -> sentencia_return .)
    VARIABLE        reduce using rule 12 (sentencia -> sentencia_return .)
    DEFINE          reduce using rule 12 (sentencia -> sentencia_return .)
    ECHO            reduce using rule 12 (sentencia -> sentencia_return .)
    IF              reduce using rule 12 (sentencia -> sentencia_return .)
    FOREACH         reduce using rule 12 (sentencia -> sentencia_return .)
    FUNCTION        reduce using rule 12 (sentencia -> sentencia_return .)
    RETURN          reduce using rule 12 (sentencia -> sentencia_return .)
    IDENTIFICADOR   reduce using rule 12 (sentencia -> sentencia_return .)
    $end            reduce using rule 12 (sentencia -> sentencia_return .)
    LLAVE_DER       reduce using rule 12 (sentencia -> sentencia_return .)


state 13

    (13) sentencia -> sentencia_llamada_funcion .

    TAG_FIN         reduce using rule 13 (sentencia -> sentencia_llamada_funcion .)
    VARIABLE        reduce using rule 13 (sentencia -> sentencia_llamada_funcion .)
    DEFINE          reduce using rule 13 (sentencia -> sentencia_llamada_funcion .)
    ECHO            reduce using rule 13 (sentencia -> sentencia_llamada_funcion .)
    IF              reduce using rule 13 (sentencia -> sentencia_llamada_funcion .)
    FOREACH         reduce using rule 13 (sentencia -> sentencia_llamada_funcion .)
    FUNCTION        reduce using rule 13 (sentencia -> sentencia_llamada_funcion .)
    RETURN          reduce using rule 13 (sentencia -> sentencia_llamada_funcion .)
    IDENTIFICADOR   reduce using rule 13 (sentencia -> sentencia_llamada_funcion .)
    $end            reduce using rule 13 (sentencia -> sentencia_llamada_funcion .)
    LLAVE_DER       reduce using rule 13 (sentencia -> sentencia_llamada_funcion .)


state 14

    (14) sentencia -> sentencia_incremento .

    TAG_FIN         reduce using rule 14 (sentencia -> sentencia_incremento .)
    VARIABLE        reduce using rule 14 (sentencia -> sentencia_incremento .)
    DEFINE          reduce using rule 14 (sentencia -> sentencia_incremento .)
    ECHO            reduce using rule 14 (sentencia -> sentencia_incremento .)
    IF              reduce using rule 14 (sentencia -> sentencia_incremento .)
    FOREACH         reduce using rule 14 (sentencia -> sentencia_incremento .)
    FUNCTION        reduce using rule 14 (sentencia -> sentencia_incremento .)
    RETURN          reduce using rule 14 (sentencia -> sentencia_incremento .)
    IDENTIFICADOR   reduce using rule 14 (sentencia -> sentencia_incremento .)
    $end            reduce using rule 14 (sentencia -> sentencia_incremento .)
    LLAVE_DER       reduce using rule 14 (sentencia -> sentencia_incremento .)


state 15

    (15) sentencia -> sentencia_comentario .

    TAG_FIN         reduce using rule 15 (sentencia -> sentencia_comentario .)
    VARIABLE        reduce using rule 15 (sentencia -> sentencia_comentario .)
    DEFINE          reduce using rule 15 (sentencia -> sentencia_comentario .)
    ECHO            reduce using rule 15 (sentencia -> sentencia_comentario .)
    IF              reduce using rule 15 (sentencia -> sentencia_comentario .)
    FOREACH         reduce using rule 15 (sentencia -> sentencia_comentario .)
    FUNCTION        reduce using rule 15 (sentencia -> sentencia_comentario .)
    RETURN          reduce using rule 15 (sentencia -> sentencia_comentario .)
    IDENTIFICADOR   reduce using rule 15 (sentencia -> sentencia_comentario .)
    $end            reduce using rule 15 (sentencia -> sentencia_comentario .)
    LLAVE_DER       reduce using rule 15 (sentencia -> sentencia_comentario .)


state 16

    (31) asignacion -> VARIABLE . ASIGNAR expresion PUNTO_COMA
    (32) asignacion_array -> VARIABLE . CORCHETE_IZQ CORCHETE_DER ASIGNAR expresion PUNTO_COMA
    (28) sentencia_incremento -> VARIABLE . MAS MAS PUNTO_COMA

    ASIGNAR         shift and go to state 26
    CORCHETE_IZQ    shift and go to state 27
    MAS             shift and go to state 28


state 17

    (33) declaracion_define -> DEFINE . PAREN_IZQ CADENA COMA expresion PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 29


state 18

    (34) sentencia_echo -> ECHO . expresion PUNTO_COMA
    (27) expresion -> . VARIABLE CORCHETE_IZQ CADENA CORCHETE_DER
    (29) expresion -> . expresion PUNTO expresion
    (42) expresion -> . expresion MAS expresion
    (43) expresion -> . expresion MENOS expresion
    (44) expresion -> . expresion MULTIPLICAR expresion
    (45) expresion -> . expresion DIVIDIR expresion
    (46) expresion -> . PAREN_IZQ expresion PAREN_DER
    (47) expresion -> . NUMERO
    (48) expresion -> . CADENA
    (49) expresion -> . VARIABLE
    (50) expresion -> . IDENTIFICADOR
    (51) expresion -> . CORCHETE_IZQ CORCHETE_DER
    (52) expresion -> . CORCHETE_IZQ lista_elementos CORCHETE_DER
    (55) expresion -> . VARIABLE CORCHETE_IZQ expresion CORCHETE_DER

    VARIABLE        shift and go to state 31
    PAREN_IZQ       shift and go to state 34
    NUMERO          shift and go to state 35
    CADENA          shift and go to state 33
    IDENTIFICADOR   shift and go to state 36
    CORCHETE_IZQ    shift and go to state 32

    expresion                      shift and go to state 30

state 19

    (35) sentencia_if -> IF . PAREN_IZQ condicion PAREN_DER LLAVE_IZQ sentencias LLAVE_DER

    PAREN_IZQ       shift and go to state 37


state 20

    (16) sentencia_foreach -> FOREACH . PAREN_IZQ VARIABLE AS ASIGNAR VARIABLE PAREN_DER LLAVE_IZQ sentencias LLAVE_DER
    (17) sentencia_foreach -> FOREACH . PAREN_IZQ VARIABLE AS VARIABLE PAREN_DER LLAVE_IZQ sentencias LLAVE_DER

    PAREN_IZQ       shift and go to state 38


state 21

    (18) sentencia_funcion -> FUNCTION . IDENTIFICADOR PAREN_IZQ parametros_funcion PAREN_DER LLAVE_IZQ sentencias LLAVE_DER

    IDENTIFICADOR   shift and go to state 39


state 22

    (23) sentencia_llamada_funcion -> IDENTIFICADOR . PAREN_IZQ lista_argumentos PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 40


state 23

    (22) sentencia_return -> RETURN . expresion PUNTO_COMA
    (27) expresion -> . VARIABLE CORCHETE_IZQ CADENA CORCHETE_DER
    (29) expresion -> . expresion PUNTO expresion
    (42) expresion -> . expresion MAS expresion
    (43) expresion -> . expresion MENOS expresion
    (44) expresion -> . expresion MULTIPLICAR expresion
    (45) expresion -> . expresion DIVIDIR expresion
    (46) expresion -> . PAREN_IZQ expresion PAREN_DER
    (47) expresion -> . NUMERO
    (48) expresion -> . CADENA
    (49) expresion -> . VARIABLE
    (50) expresion -> . IDENTIFICADOR
    (51) expresion -> . CORCHETE_IZQ CORCHETE_DER
    (52) expresion -> . CORCHETE_IZQ lista_elementos CORCHETE_DER
    (55) expresion -> . VARIABLE CORCHETE_IZQ expresion CORCHETE_DER

    VARIABLE        shift and go to state 31
    PAREN_IZQ       shift and go to state 34
    NUMERO          shift and go to state 35
    CADENA          shift and go to state 33
    IDENTIFICADOR   shift and go to state 36
    CORCHETE_IZQ    shift and go to state 32

    expresion                      shift and go to state 41

state 24

    (1) programa -> TAG_INICIO sentencias TAG_FIN .

    $end            reduce using rule 1 (programa -> TAG_INICIO sentencias TAG_FIN .)


state 25

    (4) sentencias -> sentencias sentencia .

    TAG_FIN         reduce using rule 4 (sentencias -> sentencias sentencia .)
    VARIABLE        reduce using rule 4 (sentencias -> sentencias sentencia .)
    DEFINE          reduce using rule 4 (sentencias -> sentencias sentencia .)
    ECHO            reduce using rule 4 (sentencias -> sentencias sentencia .)
    IF              reduce using rule 4 (sentencias -> sentencias sentencia .)
    FOREACH         reduce using rule 4 (sentencias -> sentencias sentencia .)
    FUNCTION        reduce using rule 4 (sentencias -> sentencias sentencia .)
    RETURN          reduce using rule 4 (sentencias -> sentencias sentencia .)
    IDENTIFICADOR   reduce using rule 4 (sentencias -> sentencias sentencia .)
    $end            reduce using rule 4 (sentencias -> sentencias sentencia .)
    LLAVE_DER       reduce using rule 4 (sentencias -> sentencias sentencia .)


state 26

    (31) asignacion -> VARIABLE ASIGNAR . expresion PUNTO_COMA
    (27) expresion -> . VARIABLE CORCHETE_IZQ CADENA CORCHETE_DER
    (29) expresion -> . expresion PUNTO expresion
    (42) expresion -> . expresion MAS expresion
    (43) expresion -> . expresion MENOS expresion
    (44) expresion -> . expresion MULTIPLICAR expresion
    (45) expresion -> . expresion DIVIDIR expresion
    (46) expresion -> . PAREN_IZQ expresion PAREN_DER
    (47) expresion -> . NUMERO
    (48) expresion -> . CADENA
    (49) expresion -> . VARIABLE
    (50) expresion -> . IDENTIFICADOR
    (51) expresion -> . CORCHETE_IZQ CORCHETE_DER
    (52) expresion -> . CORCHETE_IZQ lista_elementos CORCHETE_DER
    (55) expresion -> . VARIABLE CORCHETE_IZQ expresion CORCHETE_DER

    VARIABLE        shift and go to state 31
    PAREN_IZQ       shift and go to state 34
    NUMERO          shift and go to state 35
    CADENA          shift and go to state 33
    IDENTIFICADOR   shift and go to state 36
    CORCHETE_IZQ    shift and go to state 32

    expresion                      shift and go to state 42

state 27

    (32) asignacion_array -> VARIABLE CORCHETE_IZQ . CORCHETE_DER ASIGNAR expresion PUNTO_COMA

    CORCHETE_DER    shift and go to state 43


state 28

    (28) sentencia_incremento -> VARIABLE MAS . MAS PUNTO_COMA

    MAS             shift and go to state 44


state 29

    (33) declaracion_define -> DEFINE PAREN_IZQ . CADENA COMA expresion PAREN_DER PUNTO_COMA

    CADENA          shift and go to state 45


state 30

    (34) sentencia_echo -> ECHO expresion . PUNTO_COMA
    (29) expresion -> expresion . PUNTO expresion
    (42) expresion -> expresion . MAS expresion
    (43) expresion -> expresion . MENOS expresion
    (44) expresion -> expresion . MULTIPLICAR expresion
    (45) expresion -> expresion . DIVIDIR expresion
